--- a/Project_web_pet/GioiThieu.html
+++ b/Project_web_pet/GioiThieu.html
@@ -52,7 +52,7 @@
                 
             </div>
             <div class="center_menu_Content">
-                <div class="Content_img">
+                <div class="Content_img" style="border: 2px solid rgb(7, 132, 216);">
                     <img src="anh/icons8-cat-footprint-30.png" alt="">
                 </div>
                 <h4>Mona Shop</h4>
@@ -64,7 +64,7 @@
 
             </div>
             <div class="center_menu_Content">
-                <div class="Content_img">
+                <div class="Content_img" style="border: 2px solid rgb(253, 236, 6);">
                     <img src="anh/icons8-fish-food-30.png" alt="">
                 </div>
                 <h4>Mona Shop</h4>
@@ -75,6 +75,63 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="footer">
+        <div class="footer_img">
+            <img src="anh/Picture4.png" alt="">
+        </div>
+        <div class="footer_menu">
+            <div class="footer_menu_left">
+                <h2><b>ĐIỀU HƯỚNG</b></h2>
+                <ul>
+                    <li><a href="#">Trang chủ</a></li>
+                    <li><a href="#">Về chúng tôi</a></li>
+                    <li><a href="#">Sản phẩm</a></li>
+                    <li><a href="#">Điểm tin hữu ích</a></li>
+                    <li><a href="#">Liên hệ</a></li>
+                </ul>
+            </div>
+            <div class="footer_menu_center">
+                <img src="anh/Picture5.png" alt="">
+                <div class="paragraph">
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed 
+                        diam nonummy nibh euismod tincidunt ut laoreet ...</p>
+                </div>
+
+                <div class="input">
+                    <input type="text" name="" id="" placeholder="Email...">
+                    <input type="submit" name="" id="" value="Gửi">
+                </div>
+            </div>
+            <div class="footer_menu_right">
+                <h2><b>THÔNG TIN LIÊN HỆ</b></h2>
+                <div class="information">
+                    <img src="anh/Picture6.png" alt="">
+                    <p>319 c16 Lý Thường Kiệt, Phường 15, Quận 11, Tp.HCM</p>
+                </div>
+                <div class="information">
+                    <img src="anh/Picture7.png" alt="">
+                    <p>0126 922 0162</p>
+                </div>
+                <div class="information">
+                    <img src="anh/Picture8.png" alt="">
+                    <div class="information_email">
+                        <p>demonhunter@gmail.com</p>
+                        <p>mon@mona.media</p>
+                    </div>
+
+                </div>
+                <div class="information">
+                    <img src="anh/Picture9.png" alt="">
+                    <p>demonhunterp</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="end">
+        <p>&#xA9; All rights reserved. Thiết kế website</p>
+        <img src="anh/Picture10.png" alt="">
+        <p>Mona Media</p>
     </div>
 </body>
 </html>
