--- a/Project_web_pet/GioiThieu.html
+++ b/Project_web_pet/GioiThieu.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giới thiệu</title>
-    <link rel="stylesheet" href="gioithieu.css">
+    <link rel="stylesheet" href="QuanLyCSS/gioithieu.css">
 </head>
 <body>
     <div class="header">
