update trang chu

--- a/Project_web_pet/TrangChu.html
+++ b/Project_web_pet/TrangChu.html
@@ -31,6 +31,250 @@
         <div class="shopnow">
             <p>SHOP NOW</p>
         </div>
+        <div class="container2">
+            <div class="container21">
+            </div>
+            <div class="container22">
+                <img src="/anh/ship.png" alt="" width="50">
+            </div>
+            <div class="container23">
+                <h2>PREE SHIPPING</h2>
+                <p>All Order Over $150</p>
+            </div>
+            <div class="container24">
+                <img src="/anh/Vector (2).png" alt="" width="45">
+            </div>
+            <div class="container25">
+                <h2>15% DISCOUNT</h2>
+                <p>For Firts Order</p>
+            </div>
+            <div class="container26">
+                <img src="/anh/Vector (3).png" alt="" width="45">
+            </div>
+            <div class="container27">
+                <h2>SECURE PAYMENT</h2>
+                <p>Confirmed</p>
+            </div>
+
+            <div class="container28">
+                <img src="/anh/Vector (4).png" alt="" width="45">
+            </div>
+            <div class="container29">
+                <h2>AWESOME GIFT</h2>
+                <p>Every Month</p>
+            </div>
+        </div>
+        <p class="chocanh">CHÓ CẢNH</p>
+        <div class="imgchocanh">
+            <img src="/anh/Group 1.png" alt="" height="65">
+        </div>
+        <div class="container3">
+            <div class="container3a">
+                <img src="/anh/cho1.png" alt=""height="280" width="280">
+                <p>CHÓ CẢNH</p>
+                <h1>Bitbull Mỹ</h1>
+                <h2>99,999,999 <u>đ</u></h2>
+            </div>
+            <div class="container3b">
+                <img src="/anh/cho2.png" alt=""height="280" width="280">
+                <p>CHÓ CẢNH</p>
+                <h1>Bully Mỹ</h1>
+                <h2>49,999,999 <u>đ</u></h2>
+            </div>
+            <div class="container3c">
+                <img src="/anh/cho3.png" alt=""height="280" width="280">
+                <p>CHÓ CẢNH</p>
+                <h1>Husky</h1>
+                <h2>29,999,999 <u>đ</u></h2>
+            </div>
+            <div class="container3d">
+                <img src="/anh/cho4.png" alt=""height="280" width="280">
+                <p>CHÓ CẢNH</p>
+                <h1>ShiBa</h1>
+                <h2>29,999,999 <u>đ</u></h2>
+            </div>
+        </div>
+        <div class="container4">
+            <div class="container4a">
+                <img src="/anh/cho5.png" alt=""height="280" width="280">
+                <p>CHÓ CẢNH</p>
+                <h1>Alaska</h1>
+                <h2>19,999,999 <u>đ</u></h2>
+            </div>
+            <div class="container4b">
+                <img src="/anh/cho6.png" alt=""height="280" width="280">
+                <p>CHÓ CẢNH</p>
+                <h1>Becgie</h1>
+                <h2>3,089,000 <u>đ</u></h2>
+            </div>
+            <div class="container4c">
+                <img src="/anh/cho7.png" alt=""height="280" width="280">
+                <p>CHÓ CẢNH</p>
+                <h1>Boston Terriwe</h1>
+                <h2>10,650,000 <u>đ</u></h2>
+            </div>
+            <div class="container4d">
+                <img src="/anh/cho8.png" alt=""height="280" width="280">
+                <p>CHÓ CẢNH</p>
+                <h1>Dobernman</h1>
+                <h2>8,870,000 <u>đ</u></h2>
+            </div>
+        </div>
+        <div class="container5">
+            <div class="container5a">
+                <div class="container5a1">
+                </div>
+                <h3>XEM THÊM</h3>
+            </div>
+        </div>
+        <img class="container6" src="/anh/image 11.png" alt=""height="430" width="1425">
+        <p class="chocanh">MÈO CẢNH</p>
+        <div class="imgchocanh">
+            <img src="/anh/Group 1.png" alt="" height="65">
+        </div>
+        <div class="container3">
+            <div class="container3a">
+                <img src="/anh/meo1.png" alt=""height="280" width="280">
+                <p>MÈO CẢNH</p>
+                <h1>Mèo Anh lông dài</h1>
+                <h2>5,769,000 <u>đ</u></h2>
+            </div>
+            <div class="container3b">
+                <img src="/anh/meo2.png" alt=""height="280" width="280">
+                <p>MÈO CẢNH</p>
+                <h1>Mèo Anh lông ngắn</h1>
+                <h2>8,564,000 <u>đ</u></h2>
+            </div>
+            <div class="container3c">
+                <img src="/anh/meo3.png" alt=""height="280" width="280">
+                <p>MÈO CẢNH</p>
+                <h1>Ba tư lông dài</h1>
+                <h2>7,500,000 <u>đ</u></h2>
+            </div>
+            <div class="container3d">
+                <img src="/anh/meo4.png" alt=""height="280" width="280">
+                <p>MÈO CẢNH</p>
+                <h1>Ba tư lông ngắn</h1>
+                <h2>5,589,000 <u>đ</u></h2>
+            </div>
+        </div>
+        <div class="container4">
+            <div class="container4a">
+                <img src="/anh/meo5.png" alt=""height="280" width="280">
+                <p>MÈO CẢNH</p>
+                <h1>Mỹ tai xoắn</h1>
+                <h2>4,521,000 <u>đ</u></h2>
+            </div>
+            <div class="container4b">
+                <img src="/anh/meo6.png" alt=""height="280" width="280">
+                <p>MÈO CẢNH</p>
+                <h1>Van thổ</h1>
+                <h2>6,582,000 <u>đ</u></h2>
+            </div>
+            <div class="container4c">
+                <img src="/anh/meo7.png" alt=""height="280" width="280">
+                <p>MÈO CẢNH</p>
+                <h1>Nhân sư không lông</h1>
+                <h2>8,929,000 <u>đ</u></h2>
+            </div>
+            <div class="container4d">
+                <img src="/anh/meo8.png" alt=""height="280" width="280">
+                <p>MÈO CẢNH</p>
+                <h1>Thổ Nhĩ Kỳ</h1>
+                <h2>6,582,000 <u>đ</u></h2>
+            </div>
+        </div>
+        <div class="container5">
+            <div class="container5a">
+                <div class="container5a1">
+                </div>
+                <h3>XEM THÊM</h3>
+            </div>
+        </div>
+        <img class="container6" src="/anh/image 12.png" alt=""height="430" width="1425">
+        <p class="chocanh">ĐỒ ĂN</p>
+        <div class="imgchocanh">
+            <img src="/anh/Group 1.png" alt="" height="65">
+        </div>
+        <div class="container3">
+            <div class="container3a">
+                <img src="/anh/DoAn1.png" alt=""height="280" width="280">
+                <p>ĐỒ Ăn CHO MÈO</p>
+                <h1>Xương gặm</h1>
+                <h2>60,000 <u>đ</u></h2>
+            </div>
+            <div class="container3b">
+                <img src="/anh/DoAn2.png" alt=""height="280" width="280">
+                <p>ĐỒ ĂN CHO CHÓ</p>
+                <h1>Iskhan</h1>
+                <h2>480,000 <u>đ</u></h2>
+            </div>
+            <div class="container3c">
+                <img src="/anh/DoAn3.png" alt=""height="280" width="280">
+                <p>ĐỒ ĂN CHO CHÓ</p>
+                <h1>Whiskas cá biển</h1>
+                <h2>35,000 <u>đ</u></h2>
+            </div>
+            <div class="container3d">
+                <img src="/anh/DoAn4.png" alt=""height="280" width="280">
+                <p>ĐỒ ĂN CHO MÈO</p>
+                <h1>Me - O</h1>
+                <h2>120,000 <u>đ</u></h2>
+            </div>
+        </div>
+        <div class="container4">
+            <div class="container4a">
+                <img src="/anh/DoAn5.png" alt=""height="280" width="280">
+                <p>ĐỒ ĂN CHO CHÓ</p>
+                <h1>Steamed bread</h1>
+                <h2>55,000 <u>đ</u></h2>
+            </div>
+            <div class="container4b">
+                <img src="/anh/DoAn6.png" alt=""height="280" width="280">
+                <p>ĐỒ ĂN CHO MÈO</p>
+                <h1>Royal Canin</h1>
+                <h2>690,000 <u>đ</u></h2>
+            </div>
+            <div class="container4c">
+                <img src="/anh/DoAn7.png" alt=""height="280" width="280">
+                <p>ĐỒ ĂN CHO CHÓ</p>
+                <h1>Snack sleeky</h1>
+                <h2>35,000 <u>đ</u></h2>
+            </div>
+            <div class="container4d">
+                <img src="/anh/DoAn8.png" alt=""height="280" width="280">
+                <p>ĐỒ ĂN CHO CHÓ</p>
+                <h1>Pate smartheart</h1>
+                <h2>35,000 <u>đ</u></h2>
+            </div>
+        </div>
+        <div class="container5">
+            <div class="container5a">
+                <div class="container5a1">
+                </div>
+                <h3>XEM THÊM</h3>
+            </div>
+        </div>
+        <div class="container7">
+            <p class="chocanh">THÔNG TIN HŨU ÍCH</p>
+            <div class="imgchocanh">
+                <img src="/anh/Group 1.png" alt="" height="65">
+            </div>
+            <img class="container6" src="/anh/image 21.png" alt=""height="430" width="1425">
+            <div class="container5">
+                <div class="container5a">
+                    <div class="container5a1">
+                    </div>
+                    <h3>XEM THÊM</h3>
+                </div>
+            </div>
+        </div>
+        <div class="container8">
+            <img src="/anh/ket.png" alt=""height="470" width="1425">
+        </div>
+        <div class="container9">
+
+        </div>
     </div>
 </body>
 </html>
