--- a/Project_web_pet/TrangChu.html
+++ b/Project_web_pet/TrangChu.html
@@ -269,11 +269,62 @@
                 </div>
             </div>
         </div>
-        <div class="container8">
-            <img src="/anh/ket.png" alt=""height="470" width="1425">
+        <div class="footer">
+            <div class="footer_img">
+                <img src="anh/Picture4.png" alt="" height="470" width="1425">
+            </div>
+            <div class="footer_menu">
+                <div class="footer_menu_left">
+                    <h2><b>ĐIỀU HƯỚNG</b></h2>
+                    <ul>
+                        <li><a href="#">Trang chủ</a></li>
+                        <li><a href="#">Về chúng tôi</a></li>
+                        <li><a href="#">Sản phẩm</a></li>
+                        <li><a href="#">Điểm tin hữu ích</a></li>
+                        <li><a href="#">Liên hệ</a></li>
+                    </ul>
+                </div>
+                <div class="footer_menu_center">
+                    <img src="anh/Picture5.png" alt="">
+                    <div class="paragraph">
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed 
+                            diam nonummy nibh euismod tincidunt ut laoreet ...</p>
+                    </div>
+    
+                    <div class="input">
+                        <input type="text" name="" id="" placeholder="Email...">
+                        <input type="submit" name="" id="" value="Gửi">
+                    </div>
+                </div>
+                <div class="footer_menu_right">
+                    <h2><b>THÔNG TIN LIÊN HỆ</b></h2>
+                    <div class="information">
+                        <img src="anh/Picture6.png" alt="">
+                        <p>319 c16 Lý Thường Kiệt, Phường 15, Quận 11, Tp.HCM</p>
+                    </div>
+                    <div class="information">
+                        <img src="anh/Picture7.png" alt="">
+                        <p>0126 922 0162</p>
+                    </div>
+                    <div class="information">
+                        <img src="anh/Picture8.png" alt="">
+                        <div class="information_email">
+                            <p>demonhunter@gmail.com</p>
+                            <p>mon@mona.media</p>
+                        </div>
+    
+                    </div>
+                    <div class="information">
+                        <img src="anh/Picture9.png" alt="">
+                        <p>demonhunterp</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="container9">
-
+        <div class="end">
+            <p>&#xA9; All rights reserved. Thiết kế website</p>
+            <img src="anh/Picture10.png" alt="" height="50" width="1425">
+            <p>Mona Media</p>
         </div>
     </div>
 </body>
