Quản lý project thành dạng thư mục và Edit trang chó cảnh

--- a/Project_web_pet/QuanLyHTML/GioiThieu.html
+++ b/Project_web_pet/QuanLyHTML/GioiThieu.html
@@ -5,43 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giới thiệu</title>
-    <link rel="stylesheet" href="QuanLyCSS/gioithieu.css">
+    <link rel="stylesheet" href="/QuanLyCSS/gioithieu.css">
 </head>
 <body>
     <div class="header">
         <div class="header_left">
-            <img src="anh/Picture1.png" alt="">
+            <a href="/QuanLyHTML/TrangChu.html"><img src="/anh/Picture1.png" alt=""></a>
             <div class="header_left_menu">
                 <ul>
-                    <li><a href="#"><b>GIỚI THIỆU</b> </a></li>
-                    <li><a href="#"><b>CHÓ CẢNH</b></a></li>
-                    <li><a href="#"><b>MÈO CẢNH</b></a></li>
-                    <li><a href="#"><b>ĐỒ ĂN</b></a></li>
-                    <li><a href="#"><b>PHỤ KIỆN</b></a></li>
-                    <li><a href="#"><b>TIN TỨC</b></a></li>
-                    <li><a href="#"><b>LIÊN HỆ</b></a></li>
+                    <li><a href="#">
+                            <span class="menu-image-title"><b>GIỚI THIỆU</b></span>
+                        </a>
+                    </li>
+                    <li><a href="/QuanLyHTML/ChoCanh.html">
+                            <span class="menu-image-title"><b>CHÓ CẢNH</b></span>
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <span class="menu-image-title"><b>MÈO CẢNH</b></span>
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <span class="menu-image-title"><b>ĐỒ ĂN</b></span>
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <span class="menu-image-title"><b>PHỤ KIỆN</b></span>
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <span class="menu-image-title"><b>TIN TỨC</b></span>
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <span class="menu-image-title"><b>LIÊN HỆ</b></span>
+                        </a>
+                    </li>
                 </ul>
             </div>
 
         </div>
         <div class="header_right">
-            <img src="anh/icons8-search-30.png" alt="">
-            <img src="anh/icons8-logout-rounded-up-32.png" alt="">
-            <img src="anh/icons8-shopping-cart-24.png" alt="">
+            <a href="#"><img src="/anh/icons8-search-30.png" alt=""></a>
+            <a href="#"><img src="/anh/icons8-logout-rounded-up-32.png" alt=""></a>
+            <a href="#"><img src="/anh/icons8-shopping-cart-24.png" alt=""></a>
         </div>
     </div>
     <div class="center">
         <div class="center_title">
             <h1>MONA MEDIA</h1>
-            <img src="anh/Picture2.png" alt="">
+            <img src="/anh/Picture2.png" alt="">
         </div>
         <div class="center_imgDog">
-            <img src="anh/Picture3.png" alt="">
+            <img src="/anh/Picture3.png" alt="">
         </div>
         <div class="center_menu">
             <div class="center_menu_Content">
                 <div class="Content_img">
-                    <img src="anh/icons8-year-of-dog-30.png" alt="">
+                    <img src="/anh/icons8-year-of-dog-30.png" alt="">
                 </div>
                 <h4>Mona Shop</h4>
                 <div class="Content_p">
@@ -53,7 +74,7 @@
             </div>
             <div class="center_menu_Content">
                 <div class="Content_img" style="border: 2px solid rgb(7, 132, 216);">
-                    <img src="anh/icons8-cat-footprint-30.png" alt="">
+                    <img src="/anh/icons8-cat-footprint-30.png" alt="">
                 </div>
                 <h4>Mona Shop</h4>
                 <div class="Content_p">
@@ -65,7 +86,7 @@
             </div>
             <div class="center_menu_Content">
                 <div class="Content_img" style="border: 2px solid rgb(253, 236, 6);">
-                    <img src="anh/icons8-fish-food-30.png" alt="">
+                    <img src="/anh/icons8-fish-food-30.png" alt="">
                 </div>
                 <h4>Mona Shop</h4>
                 <div class="Content_p">
@@ -78,7 +99,7 @@
     </div>
     <div class="footer">
         <div class="footer_img">
-            <img src="anh/Picture4.png" alt="">
+            <img src="/anh/Picture4.png" alt="">
         </div>
         <div class="footer_menu">
             <div class="footer_menu_left">
@@ -92,7 +113,7 @@
                 </ul>
             </div>
             <div class="footer_menu_center">
-                <img src="anh/Picture5.png" alt="">
+                <img src="/anh/Picture5.png" alt="">
                 <div class="paragraph">
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed 
                         diam nonummy nibh euismod tincidunt ut laoreet ...</p>
@@ -106,31 +127,31 @@
             <div class="footer_menu_right">
                 <h2><b>THÔNG TIN LIÊN HỆ</b></h2>
                 <div class="information">
-                    <img src="anh/Picture6.png" alt="">
-                    <p>319 c16 Lý Thường Kiệt, Phường 15, Quận 11, Tp.HCM</p>
+                    <img src="/anh/Picture6.png" alt="">
+                    <p>319 c16 Lý Thường Kiệt, Phường 15,<br>
+                         Quận 11, Tp.HCM</p>
                 </div>
                 <div class="information">
-                    <img src="anh/Picture7.png" alt="">
-                    <p>0126 922 0162</p>
+                    <img src="/anh/Picture7.png" alt="">
+                    <p><a href="#">0126 922 0162</a></p>
                 </div>
                 <div class="information">
-                    <img src="anh/Picture8.png" alt="">
-                    <div class="information_email">
-                        <p>demonhunter@gmail.com</p>
-                        <p>mon@mona.media</p>
-                    </div>
-
+                    <img src="/anh/Picture8.png" alt="">
+                    <p><a href="#">demonhunter@gmail.com</a>
+                        <br>
+                        <a href="#">mon@mona.media</a>
+                    </p>
                 </div>
                 <div class="information">
-                    <img src="anh/Picture9.png" alt="">
-                    <p>demonhunterp</p>
+                    <img src="/anh/Picture9.png" alt="">
+                    <p><a href="#">demonhunterp</a></p>
                 </div>
             </div>
         </div>
     </div>
     <div class="end">
         <p>&#xA9; All rights reserved. Thiết kế website</p>
-        <img src="anh/Picture10.png" alt="">
+        <img src="/anh/Picture10.png" alt="">
         <p>Mona Media</p>
     </div>
 </body>
