--- a/Project_web_pet/QuanLyHTML/TrangChu.html
+++ b/Project_web_pet/QuanLyHTML/TrangChu.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="QuanLyCSS/trangchu.css">
+    <link rel="stylesheet" href="/QuanLyCSS/trangchu.css">
     <title>TrangChu</title>
 </head>
 <body>
     <div class="container">
         <div class="container1">    
-            <img src="anh/image 1.jpg" alt="" width="1425">
-            <img class="anh1" src="anh/logo-dogcat-blue.png" alt="">
+            <img src="/anh/image 1.jpg" alt="" width="1425">
+            <img class="anh1" src="/anh/logo-dogcat-blue.png" alt="">
             <p class="p1">GIỚI THIỆU</p>
             <p class="p2">CHÓ CẢNH</p>
             <p class="p3">MÈO CẢNH</p>
@@ -19,9 +19,9 @@
             <p class="p5">PHỤ KIỆN</p>
             <p class="p6">TIN TỨC</p>
             <p class="p7">LIÊN HỆ</p>
-            <img class="anh2" src="anh/Vector.png" alt="" height="25">
-            <img class="anh3" src="anh/Login.png" alt="" height="35">
-            <img class="anh4" src="anh/Vector (1).png" alt="" height="25">
+            <img class="anh2" src="/anh/Vector.png" alt="" height="25">
+            <img class="anh3" src="/anh/Login.png" alt="" height="35">
+            <img class="anh4" src="/anh/Vector (1).png" alt="" height="25">
         </div>
         <p class="p1">OUR STORY</p>
         <p class="p2">NEW ARRIVALS</p>
@@ -271,7 +271,7 @@
         </div>
         <div class="footer">
             <div class="footer_img">
-                <img src="anh/Picture4.png" alt="" height="470" width="1425">
+                <img src="/anh/Picture4.png" alt="" height="470" width="1425">
             </div>
             <div class="footer_menu">
                 <div class="footer_menu_left">
@@ -285,7 +285,7 @@
                     </ul>
                 </div>
                 <div class="footer_menu_center">
-                    <img src="anh/Picture5.png" alt="">
+                    <img src="/anh/Picture5.png" alt="">
                     <div class="paragraph">
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed 
                             diam nonummy nibh euismod tincidunt ut laoreet ...</p>
@@ -299,15 +299,15 @@
                 <div class="footer_menu_right">
                     <h2><b>THÔNG TIN LIÊN HỆ</b></h2>
                     <div class="information">
-                        <img src="anh/Picture6.png" alt="">
-                        <p>319 c16 Lý Thường Kiệt, Phường 15, Quận 11, Tp.HCM</p>
+                        <img src="/anh/Picture6.png" alt="">
+                        <p>319 c16 Lý Thường Kiệt, Phường 15,<br> Quận 11, Tp.HCM</p>
                     </div>
                     <div class="information">
-                        <img src="anh/Picture7.png" alt="">
+                        <img src="/anh/Picture7.png" alt="">
                         <p>0126 922 0162</p>
                     </div>
                     <div class="information">
-                        <img src="anh/Picture8.png" alt="">
+                        <img src="/anh/Picture8.png" alt="">
                         <div class="information_email">
                             <p>demonhunter@gmail.com</p>
                             <p>mon@mona.media</p>
