--- a/Project_web_pet/QuanLyHTML/TrangChu.html
+++ b/Project_web_pet/QuanLyHTML/TrangChu.html
@@ -10,15 +10,15 @@
 <body>
     <div class="container">
         <div class="container1">    
-            <img src="/anh/image 1.jpg" alt="" width="1425">
+            <img src="/anh/image 1.jpg" alt="" width="100%" >
             <img class="anh1" src="/anh/logo-dogcat-blue.png" alt="">
-            <p class="p1">GIỚI THIỆU</p>
-            <p class="p2">CHÓ CẢNH</p>
-            <p class="p3">MÈO CẢNH</p>
-            <p class="p4">ĐỒ ĂN</p>
-            <p class="p5">PHỤ KIỆN</p>
-            <p class="p6">TIN TỨC</p>
-            <p class="p7">LIÊN HỆ</p>
+            <a class="p1" href="/QuanLyHTML/GioiThieu.html">GIỚI THIỆU</a>
+            <a class="p2" href="/QuanLyHTML/ChoCanh.html">CHÓ CẢNH</a>
+            <a class="p3" href="/QuanLyHTML/MeoCanh.html">MÈO CẢNH</a>
+            <a class="p4" href="">ĐỒ ĂN</a>
+            <a class="p5" href="">PHỤ KIỆN</a>
+            <a class="p6" href="">TIN TỨC</a>
+            <a class="p7" href="">LIÊN HỆ</a>
             <img class="anh2" src="/anh/Vector.png" alt="" height="25">
             <img class="anh3" src="/anh/Login.png" alt="" height="35">
             <img class="anh4" src="/anh/Vector (1).png" alt="" height="25">
@@ -124,7 +124,7 @@
             <div class="container5a">
                 <div class="container5a1">
                 </div>
-                <h3>XEM THÊM</h3>
+                <a href="/QuanLyHTML/ChoCanh.html">XEM THÊM</a>
             </div>
         </div>
         <img class="container6" src="/anh/image 11.png" alt=""height="430" width="1425">
@@ -188,10 +188,17 @@
             <div class="container5a">
                 <div class="container5a1">
                 </div>
-                <h3>XEM THÊM</h3>
+                <a href="/QuanLyHTML/MeoCanh.html">XEM THÊM</a>
             </div>
         </div>
-        <img class="container6" src="/anh/image 12.png" alt=""height="430" width="1425">
+        <div class="container6">
+            <div class="container6a">
+                <img  src="/anh/banner1.jpg" alt="" >
+            </div>
+            <div class="container6a">
+                <img  src="/anh/banner2.jpg" alt="" >
+            </div>
+        </div>
         <p class="chocanh">ĐỒ ĂN</p>
         <div class="imgchocanh">
             <img src="/anh/Group 1.png" alt="" height="65">
@@ -252,7 +259,7 @@
             <div class="container5a">
                 <div class="container5a1">
                 </div>
-                <h3>XEM THÊM</h3>
+                <a href="">XEM THÊM</a>
             </div>
         </div>
         <div class="container7">
@@ -260,18 +267,53 @@
             <div class="imgchocanh">
                 <img src="/anh/Group 1.png" alt="" height="65">
             </div>
-            <img class="container6" src="/anh/image 21.png" alt=""height="430" width="1425">
+            <div class="container7a">
+                <div class="container7a1">
+                    <div class="container7a11">
+                        <img src="/anh/banner3.png" alt=""  width="100%">
+                    </div>
+                    <div class="container7a11">
+                        <img src="/anh/banner4.jpg" alt="" width="450">
+                    </div>
+                    <div class="container7a11">
+                        <img src="/anh/banner5.jpg" alt=""  width="450">
+                    </div>
+                </div>
+                <div class="container7a2">
+                    <div class="container7a21">
+                        <h5>DUIS LUCTUS ELIT NISI, ET CURSUS...</h5>
+                        <P>
+                            Chế độ ăn cho chó con Chó con từ 2 tháng tuổi đến 6 tháng [...]
+                        </P>
+                        <a href="">Xem thêm</a>
+                    </div>
+                    <div class="container7a21">
+                        <h5><Main> MAURIS TRISTIQUE PRETIUM TEMPUS...</Main></h5>
+                        <P>
+                            Tuổi thọ trung bình của mèo nếu sống trong nhà là 13 năm. Nhưng nếu [...]
+                        </P>
+                        <a href="">Xem thêm</a>
+                    </div>
+                    <div class="container7a21">
+                        <h5>ALIQUAM PLACERAT NISL NEC...</h5>
+                        <P>
+                            Kinh nghiệm nuôi chó con: Chọn chó con khoẻ mạnh để nuôi Mọi người khi đi [...]
+                        </P>
+                        <a href="">Xem thêm</a>
+                    </div>
+                </div>
+            </div>
             <div class="container5">
                 <div class="container5a">
                     <div class="container5a1">
                     </div>
-                    <h3>XEM THÊM</h3>
+                    <a href="">XEM THÊM</a>
                 </div>
             </div>
         </div>
         <div class="footer">
             <div class="footer_img">
-                <img src="/anh/Picture4.png" alt="" height="470" width="1425">
+                <img src="/anh/Picture4.png" alt="" height="470" width="100%">
             </div>
             <div class="footer_menu">
                 <div class="footer_menu_left">
@@ -315,7 +357,7 @@
     
                     </div>
                     <div class="information">
-                        <img src="anh/Picture9.png" alt="">
+                        <img src="/anh/Picture9.png" alt="">
                         <p>demonhunterp</p>
                     </div>
                 </div>
@@ -323,7 +365,7 @@
         </div>
         <div class="end">
             <p>&#xA9; All rights reserved. Thiết kế website</p>
-            <img src="anh/Picture10.png" alt="" height="50" width="1425">
+            <img src="/anh/Picture10.png" alt="" height="50">
             <p>Mona Media</p>
         </div>
     </div>
