--- a/Project_web_pet/QuanLyHTML/TrangChu.html
+++ b/Project_web_pet/QuanLyHTML/TrangChu.html
@@ -19,9 +19,9 @@
             <a class="p5" href="">PHỤ KIỆN</a>
             <a class="p6" href="">TIN TỨC</a>
             <a class="p7" href="">LIÊN HỆ</a>
-            <img class="anh2" src="/anh/Vector.png" alt="" height="25">
-            <img class="anh3" src="/anh/Login.png" alt="" height="35">
-            <img class="anh4" src="/anh/Vector (1).png" alt="" height="25">
+            <a href=""> <img class="anh2" src="/anh/Vector.png" alt="" height="25"></a>
+            <a href=""><img class="anh3" src="/anh/Login.png" alt="" height="35"></a>
+            <a href=""><img class="anh4" src="/anh/Vector (1).png" alt="" height="25"></a>
         </div>
         <p class="p1">OUR STORY</p>
         <p class="p2">NEW ARRIVALS</p>
@@ -70,25 +70,33 @@
         </div>
         <div class="container3">
             <div class="container3a">
-                <img src="/anh/cho1.png" alt=""height="280" width="280">
+                <div class="img1">
+                    <img src="/anh/cho1.png" alt=""height="280" width="280">
+                </div>
                 <p>CHÓ CẢNH</p>
                 <h1>Bitbull Mỹ</h1>
                 <h2>99,999,999 <u>đ</u></h2>
             </div>
-            <div class="container3b">
-                <img src="/anh/cho2.png" alt=""height="280" width="280">
+            <div class="container3a">
+                <div class="img1">
+                    <img src="/anh/cho2.png" alt=""height="280" width="280">
+                </div>
                 <p>CHÓ CẢNH</p>
                 <h1>Bully Mỹ</h1>
                 <h2>49,999,999 <u>đ</u></h2>
             </div>
-            <div class="container3c">
-                <img src="/anh/cho3.png" alt=""height="280" width="280">
+            <div class="container3a">
+                <div class="img1">
+                    <img src="/anh/cho3.png" alt=""height="280" width="280">
+                </div>
                 <p>CHÓ CẢNH</p>
                 <h1>Husky</h1>
                 <h2>29,999,999 <u>đ</u></h2>
             </div>
-            <div class="container3d">
-                <img src="/anh/cho4.png" alt=""height="280" width="280">
+            <div class="container3a">
+                <div class="img1">
+                    <img src="/anh/cho4.png" alt=""height="280" width="280">
+                </div>
                 <p>CHÓ CẢNH</p>
                 <h1>ShiBa</h1>
                 <h2>29,999,999 <u>đ</u></h2>
@@ -96,25 +104,33 @@
         </div>
         <div class="container4">
             <div class="container4a">
-                <img src="/anh/cho5.png" alt=""height="280" width="280">
+                <div class="img1">
+                    <img src="/anh/cho5.png" alt=""height="280" width="280">
+                </div>
                 <p>CHÓ CẢNH</p>
                 <h1>Alaska</h1>
                 <h2>19,999,999 <u>đ</u></h2>
             </div>
-            <div class="container4b">
-                <img src="/anh/cho6.png" alt=""height="280" width="280">
+            <div class="container4a">
+                <div class="img1">
+                    <img src="/anh/cho6.png" alt=""height="280" width="280">
+                </div>
                 <p>CHÓ CẢNH</p>
                 <h1>Becgie</h1>
                 <h2>3,089,000 <u>đ</u></h2>
             </div>
-            <div class="container4c">
-                <img src="/anh/cho7.png" alt=""height="280" width="280">
+            <div class="container4a">
+                <div class="img1">
+                    <img src="/anh/cho7.png" alt=""height="280" width="280">
+                </div>
                 <p>CHÓ CẢNH</p>
                 <h1>Boston Terriwe</h1>
                 <h2>10,650,000 <u>đ</u></h2>
             </div>
-            <div class="container4d">
-                <img src="/anh/cho8.png" alt=""height="280" width="280">
+            <div class="container4a">
+                <div class="img1">
+                    <img src="/anh/cho8.png" alt=""height="280" width="280">
+                </div>
                 <p>CHÓ CẢNH</p>
                 <h1>Dobernman</h1>
                 <h2>8,870,000 <u>đ</u></h2>
@@ -134,25 +150,33 @@
         </div>
         <div class="container3">
             <div class="container3a">
-                <img src="/anh/meo1.png" alt=""height="280" width="280">
+                <div class="img1">
+                    <img src="/anh/meo1.png" alt=""height="280" width="280">
+                </div>
                 <p>MÈO CẢNH</p>
                 <h1>Mèo Anh lông dài</h1>
                 <h2>5,769,000 <u>đ</u></h2>
             </div>
-            <div class="container3b">
-                <img src="/anh/meo2.png" alt=""height="280" width="280">
+            <div class="container3a">
+                <div class="img1">
+                    <img src="/anh/meo2.png" alt=""height="280" width="280">
+                </div>
                 <p>MÈO CẢNH</p>
                 <h1>Mèo Anh lông ngắn</h1>
                 <h2>8,564,000 <u>đ</u></h2>
             </div>
-            <div class="container3c">
-                <img src="/anh/meo3.png" alt=""height="280" width="280">
+            <div class="container3a">
+                <div class="img1">
+                    <img src="/anh/meo3.png" alt=""height="280" width="280">
+                </div>
                 <p>MÈO CẢNH</p>
                 <h1>Ba tư lông dài</h1>
                 <h2>7,500,000 <u>đ</u></h2>
             </div>
-            <div class="container3d">
-                <img src="/anh/meo4.png" alt=""height="280" width="280">
+            <div class="container3a">
+                <div class="img1">
+                    <img src="/anh/meo4.png" alt=""height="280" width="280">
+                </div>
                 <p>MÈO CẢNH</p>
                 <h1>Ba tư lông ngắn</h1>
                 <h2>5,589,000 <u>đ</u></h2>
@@ -160,25 +184,33 @@
         </div>
         <div class="container4">
             <div class="container4a">
-                <img src="/anh/meo5.png" alt=""height="280" width="280">
+                <div class="img1">
+                    <img src="/anh/meo5.png" alt=""height="280" width="280">
+                </div>
                 <p>MÈO CẢNH</p>
                 <h1>Mỹ tai xoắn</h1>
                 <h2>4,521,000 <u>đ</u></h2>
             </div>
-            <div class="container4b">
-                <img src="/anh/meo6.png" alt=""height="280" width="280">
+            <div class="container4a">
+                <div class="img1">
+                    <img src="/anh/meo6.png" alt=""height="280" width="280">
+                </div>
                 <p>MÈO CẢNH</p>
                 <h1>Van thổ</h1>
                 <h2>6,582,000 <u>đ</u></h2>
             </div>
-            <div class="container4c">
-                <img src="/anh/meo7.png" alt=""height="280" width="280">
+            <div class="container4a">
+                <div class="img1">
+                    <img src="/anh/meo7.png" alt=""height="280" width="280">
+                </div>
                 <p>MÈO CẢNH</p>
                 <h1>Nhân sư không lông</h1>
                 <h2>8,929,000 <u>đ</u></h2>
             </div>
-            <div class="container4d">
-                <img src="/anh/meo8.png" alt=""height="280" width="280">
+            <div class="container4a">
+                <div class="img1">
+                    <img src="/anh/meo8.png" alt=""height="280" width="280">
+                </div>
                 <p>MÈO CẢNH</p>
                 <h1>Thổ Nhĩ Kỳ</h1>
                 <h2>6,582,000 <u>đ</u></h2>
@@ -205,25 +237,33 @@
         </div>
         <div class="container3">
             <div class="container3a">
-                <img src="/anh/DoAn1.png" alt=""height="280" width="280">
+                <div class="img1">
+                    <img src="/anh/DoAn1.png" alt=""height="280" width="280">
+                </div>
                 <p>ĐỒ Ăn CHO MÈO</p>
                 <h1>Xương gặm</h1>
                 <h2>60,000 <u>đ</u></h2>
             </div>
-            <div class="container3b">
-                <img src="/anh/DoAn2.png" alt=""height="280" width="280">
+            <div class="container3a">
+                <div class="img1">
+                    <img src="/anh/DoAn2.png" alt=""height="280" width="280">
+                </div>
                 <p>ĐỒ ĂN CHO CHÓ</p>
                 <h1>Iskhan</h1>
                 <h2>480,000 <u>đ</u></h2>
             </div>
-            <div class="container3c">
-                <img src="/anh/DoAn3.png" alt=""height="280" width="280">
+            <div class="container3a">
+                <div class="img1">
+                    <img src="/anh/DoAn3.png" alt=""height="280" width="280">
+                </div>
                 <p>ĐỒ ĂN CHO CHÓ</p>
                 <h1>Whiskas cá biển</h1>
                 <h2>35,000 <u>đ</u></h2>
             </div>
-            <div class="container3d">
-                <img src="/anh/DoAn4.png" alt=""height="280" width="280">
+            <div class="container3a">
+                <div class="img1">
+                    <img src="/anh/DoAn4.png" alt=""height="280" width="280">
+                </div>
                 <p>ĐỒ ĂN CHO MÈO</p>
                 <h1>Me - O</h1>
                 <h2>120,000 <u>đ</u></h2>
@@ -231,25 +271,33 @@
         </div>
         <div class="container4">
             <div class="container4a">
-                <img src="/anh/DoAn5.png" alt=""height="280" width="280">
+                <div class="img1">
+                    <img src="/anh/DoAn5.png" alt=""height="280" width="280">
+                </div>
                 <p>ĐỒ ĂN CHO CHÓ</p>
                 <h1>Steamed bread</h1>
                 <h2>55,000 <u>đ</u></h2>
             </div>
-            <div class="container4b">
-                <img src="/anh/DoAn6.png" alt=""height="280" width="280">
+            <div class="container4a">
+                <div class="img1">
+                    <img src="/anh/DoAn6.png" alt=""height="280" width="280">
+                </div>
                 <p>ĐỒ ĂN CHO MÈO</p>
                 <h1>Royal Canin</h1>
                 <h2>690,000 <u>đ</u></h2>
             </div>
-            <div class="container4c">
-                <img src="/anh/DoAn7.png" alt=""height="280" width="280">
+            <div class="container4a">
+                <div class="img1">
+                    <img src="/anh/DoAn7.png" alt=""height="280" width="280">
+                </div>
                 <p>ĐỒ ĂN CHO CHÓ</p>
                 <h1>Snack sleeky</h1>
                 <h2>35,000 <u>đ</u></h2>
             </div>
-            <div class="container4d">
-                <img src="/anh/DoAn8.png" alt=""height="280" width="280">
+            <div class="container4a">
+                <div class="img1">
+                    <img src="/anh/DoAn8.png" alt=""height="280" width="280">
+                </div>
                 <p>ĐỒ ĂN CHO CHÓ</p>
                 <h1>Pate smartheart</h1>
                 <h2>35,000 <u>đ</u></h2>
