Edit giỏ hàng và thêm thông báo khi click vào giỏ hàng

--- a/Project_web_pet/QuanLyHTML/GioiThieu.html
+++ b/Project_web_pet/QuanLyHTML/GioiThieu.html
@@ -13,7 +13,7 @@
             <a href="/QuanLyHTML/TrangChu.html"><img src="/anh/Picture1.png" alt=""></a>
             <div class="header_left_menu">
                 <ul>
-                    <li><a href="#">
+                    <li style="background-color: #30b5b2;"><a href="#">
                             <span class="menu-image-title"><b>GIỚI THIỆU</b></span>
                         </a>
                     </li>
@@ -21,7 +21,7 @@
                             <span class="menu-image-title"><b>CHÓ CẢNH</b></span>
                         </a>
                     </li>
-                    <li><a href="#">
+                    <li><a href="/QuanLyHTML/MeoCanh.html">
                             <span class="menu-image-title"><b>MÈO CẢNH</b></span>
                         </a>
                     </li>
@@ -46,9 +46,9 @@
 
         </div>
         <div class="header_right">
-            <a href="#"><img src="/anh/icons8-search-30.png" alt=""></a>
-            <a href="#"><img src="/anh/icons8-logout-rounded-up-32.png" alt=""></a>
-            <a href="#"><img src="/anh/icons8-shopping-cart-24.png" alt=""></a>
+            <a href="#"><img src="/anh/Vector.png" alt=""></a>
+            <a href="#"><img src="/anh/Login.png" alt=""></a>
+            <a href="#"><img src="/anh/Vector (1).png" alt=""></a>
         </div>
     </div>
     <div class="center">
