--- a/Project_web_pet/QuanLyHTML/MeoCanh.html
+++ b/Project_web_pet/QuanLyHTML/MeoCanh.html
@@ -21,7 +21,7 @@
                             <span class="menu-image-title"><b>CHÓ CẢNH</b></span>
                         </a>
                     </li>
-                    <li><a href="/QuanLyHTML/MeoCanh.html">
+                    <li style="background-color: #30b5b2;"><a href="/QuanLyHTML/MeoCanh.html">
                             <span class="menu-image-title"><b>MÈO CẢNH</b></span>
                         </a>
                     </li>
@@ -46,9 +46,9 @@
 
         </div>
         <div class="header_right">
-            <a href="#"><img src="/anh/icons8-search-30.png" alt=""></a>
-            <a href="#"><img src="/anh/icons8-logout-rounded-up-32.png" alt=""></a>
-            <a href="#"><img src="/anh/icons8-shopping-cart-24.png" alt=""></a>
+            <a href="#"><img src="/anh/Vector.png" alt=""></a>
+            <a href="#"><img src="/anh/Login.png" alt=""></a>
+            <a href="#"><img src="/anh/Vector (1).png" alt=""></a>
         </div>
     </div>
     <div class="center">
@@ -137,7 +137,9 @@
                     <div class="cards_img">
                         <img src="/anh/Picture30.png" alt="">
                         <div class="cards_shopping">
-                            <img src="/anh/icons8-shopping-mall-30.png" alt="">
+                            <div>+
+                                <span></span>
+                            </div>
                         </div>
                     </div>
                     <div class="cards_name">
@@ -149,7 +151,9 @@
                     <div class="cards_img">
                         <img src="/anh/Picture31.png" alt="">
                         <div class="cards_shopping">
-                            <img src="/anh/icons8-shopping-mall-30.png" alt="">
+                            <div>+
+                                <span></span>
+                            </div>
                         </div>
                     </div>
 
@@ -162,7 +166,9 @@
                     <div class="cards_img">
                         <img src="/anh/Picture32.png" alt="">
                         <div class="cards_shopping">
-                            <img src="/anh/icons8-shopping-mall-30.png" alt="">
+                            <div>+
+                                <span></span>
+                            </div>
                         </div>
                     </div>
 
@@ -175,7 +181,9 @@
                     <div class="cards_img">
                         <img src="/anh/Picture33.png" alt="">
                         <div class="cards_shopping">
-                            <img src="/anh/icons8-shopping-mall-30.png" alt="">
+                            <div>+
+                                <span></span>
+                            </div>
                         </div>
                     </div>
 
@@ -188,7 +196,9 @@
                     <div class="cards_img">
                         <img src="/anh/Picture34.png" alt="">
                         <div class="cards_shopping">
-                            <img src="/anh/icons8-shopping-mall-30.png" alt="">
+                            <div>+
+                                <span></span>
+                            </div>
                         </div>
                     </div>
 
@@ -201,7 +211,9 @@
                     <div class="cards_img">
                         <img src="/anh/Picture35.png" alt="">
                         <div class="cards_shopping">
-                            <img src="/anh/icons8-shopping-mall-30.png" alt="">
+                            <div>+
+                                <span></span>
+                            </div>
                         </div>
                     </div>
 
@@ -214,7 +226,9 @@
                     <div class="cards_img">
                         <img src="/anh/Picture36.png" alt="">
                         <div class="cards_shopping">
-                            <img src="/anh/icons8-shopping-mall-30.png" alt="">
+                            <div>+
+                                <span></span>
+                            </div>
                         </div>
                     </div>
 
@@ -227,7 +241,9 @@
                     <div class="cards_img">
                         <img src="/anh/Picture37.png" alt="">
                         <div class="cards_shopping">
-                            <img src="/anh/icons8-shopping-mall-30.png" alt="">
+                            <div>+
+                                <span></span>
+                            </div>
                         </div>
                     </div>
 
@@ -240,7 +256,9 @@
                     <div class="cards_img">
                         <img src="/anh/Picture38.png" alt="">
                         <div class="cards_shopping">
-                            <img src="/anh/icons8-shopping-mall-30.png" alt="">
+                            <div>+
+                                <span></span>
+                            </div>
                         </div>
                     </div>
 
@@ -310,5 +328,9 @@
         <img src="/anh/Picture10.png" alt="">
         <p>Mona Media</p>
     </div>
+    
+    <script src="/js/main.js"></script>
+    <script src= "https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.nostyle.js">
+    </script>
 </body>
 </html>
