--- a/Project_web_pet/QuanLyHTML/GioiThieu.html
+++ b/Project_web_pet/QuanLyHTML/GioiThieu.html
@@ -7,7 +7,9 @@
     <title>Giới thiệu</title>
     <link rel="stylesheet" href="/QuanLyCSS/gioithieu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
+    <link rel="stylesheet" href="/QuanLyCSS/header.css">
+    <link rel="stylesheet" href="/QuanLyCSS/footer.css">
+    <link rel="stylesheet" href="/QuanLyCSS/Modal.css">
 </head>
 <body>
     <div id="wrapper">
