capnhat trang chu

--- a/Project_web_pet/QuanLyHTML/TrangChu.html
+++ b/Project_web_pet/QuanLyHTML/TrangChu.html
@@ -78,32 +78,32 @@
                         <img src="/anh/cho1.png" alt=""height="280" width="280">
                     </div>
                     <p>CHÓ CẢNH</p>
-                    <h1>Bitbull Mỹ</h1>
-                    <h2>99,999,999 <u>đ</u></h2>
+                    <p class="p10">Bitbull Mỹ</p>
+                    <p class="p20">99,999,999 <u>đ</u></p>
                 </div>
                 <div class="container3a">
                     <div class="img1">
                         <img src="/anh/cho2.png" alt=""height="280" width="280">
                     </div>
                     <p>CHÓ CẢNH</p>
-                    <h1>Bully Mỹ</h1>
-                    <h2>49,999,999 <u>đ</u></h2>
+                    <p class="p10">Bully Mỹ</p>
+                    <p class="p20">49,999,999 <u>đ</u></p>
                 </div>
                 <div class="container3a">
                     <div class="img1">
                         <img src="/anh/cho3.png" alt=""height="280" width="280">
                     </div>
                     <p>CHÓ CẢNH</p>
-                    <h1>Husky</h1>
-                    <h2>29,999,999 <u>đ</u></h2>
+                    <p class="p10">Husky</p>
+                    <p class="p20">29,999,999 <u>đ</u></p>
                 </div>
                 <div class="container3a">
                     <div class="img1">
                         <img src="/anh/cho4.png" alt=""height="280" width="280">
                     </div>
                     <p>CHÓ CẢNH</p>
-                    <h1>ShiBa</h1>
-                    <h2>29,999,999 <u>đ</u></h2>
+                    <p class="p10">ShiBa</p>
+                    <p class="p20">29,999,999 <u>đ</u></p>
                 </div>
             </div>
             <div class="container4">
@@ -112,32 +112,32 @@
                         <img src="/anh/cho5.png" alt=""height="280" width="280">
                     </div>
                     <p>CHÓ CẢNH</p>
-                    <h1>Alaska</h1>
-                    <h2>19,999,999 <u>đ</u></h2>
+                    <p class="p10">Alaska</p>
+                    <p class="p20">19,999,999 <u>đ</u></p>
                 </div>
                 <div class="container4a">
                     <div class="img1">
                         <img src="/anh/cho6.png" alt=""height="280" width="280">
                     </div>
                     <p>CHÓ CẢNH</p>
-                    <h1>Becgie</h1>
-                    <h2>3,089,000 <u>đ</u></h2>
+                    <p class="p10">Becgie</p>
+                    <p class="p20">3,089,000 <u>đ</u></p>
                 </div>
                 <div class="container4a">
                     <div class="img1">
                         <img src="/anh/cho7.png" alt=""height="280" width="280">
                     </div>
                     <p>CHÓ CẢNH</p>
-                    <h1>Boston Terriwe</h1>
-                    <h2>10,650,000 <u>đ</u></h2>
+                    <p class="p10">Boston Terriwe</p>
+                    <p class="p20">10,650,000 <u>đ</u></p>
                 </div>
                 <div class="container4a">
                     <div class="img1">
                         <img src="/anh/cho8.png" alt=""height="280" width="280">
                     </div>
                     <p>CHÓ CẢNH</p>
-                    <h1>Dobernman</h1>
-                    <h2>8,870,000 <u>đ</u></h2>
+                    <p class="p10">Dobernman</p>
+                    <p class="p20">8,870,000 <u>đ</u></p>
                 </div>
             </div>
             <div class="container5">
@@ -158,32 +158,32 @@
                         <img src="/anh/meo1.png" alt=""height="280" width="280">
                     </div>
                     <p>MÈO CẢNH</p>
-                    <h1>Mèo Anh lông dài</h1>
-                    <h2>5,769,000 <u>đ</u></h2>
+                    <p class="p10">Mèo Anh lông dài</p>
+                    <p class="p20">5,769,000 <u>đ</u></p>
                 </div>
                 <div class="container3a">
                     <div class="img1">
                         <img src="/anh/meo2.png" alt=""height="280" width="280">
                     </div>
                     <p>MÈO CẢNH</p>
-                    <h1>Mèo Anh lông ngắn</h1>
-                    <h2>8,564,000 <u>đ</u></h2>
+                    <p class="p10">Mèo Anh lông ngắn</p>
+                    <p class="p20">8,564,000 <u>đ</u></p>
                 </div>
                 <div class="container3a">
                     <div class="img1">
                         <img src="/anh/meo3.png" alt=""height="280" width="280">
                     </div>
                     <p>MÈO CẢNH</p>
-                    <h1>Ba tư lông dài</h1>
-                    <h2>7,500,000 <u>đ</u></h2>
+                    <p class="p10">Ba tư lông dài</p>
+                    <p class="p20">7,500,000 <u>đ</u></p>
                 </div>
                 <div class="container3a">
                     <div class="img1">
                         <img src="/anh/meo4.png" alt=""height="280" width="280">
                     </div>
                     <p>MÈO CẢNH</p>
-                    <h1>Ba tư lông ngắn</h1>
-                    <h2>5,589,000 <u>đ</u></h2>
+                    <p class="p10">Ba tư lông ngắn</p>
+                    <p class="p20">5,589,000 <u>đ</u></p>
                 </div>
             </div>
             <div class="container4">
@@ -192,32 +192,32 @@
                         <img src="/anh/meo5.png" alt=""height="280" width="280">
                     </div>
                     <p>MÈO CẢNH</p>
-                    <h1>Mỹ tai xoắn</h1>
-                    <h2>4,521,000 <u>đ</u></h2>
+                    <p class="p10">Mỹ tai xoắn</p>
+                    <p class="p20">4,521,000 <u>đ</u></p>
                 </div>
                 <div class="container4a">
                     <div class="img1">
                         <img src="/anh/meo6.png" alt=""height="280" width="280">
                     </div>
                     <p>MÈO CẢNH</p>
-                    <h1>Van thổ</h1>
-                    <h2>6,582,000 <u>đ</u></h2>
+                    <p class="p10">Van thổ</p>
+                    <p class="p20">6,582,000 <u>đ</u></h2>
                 </div>
                 <div class="container4a">
                     <div class="img1">
                         <img src="/anh/meo7.png" alt=""height="280" width="280">
                     </div>
                     <p>MÈO CẢNH</p>
-                    <h1>Nhân sư không lông</h1>
-                    <h2>8,929,000 <u>đ</u></h2>
+                    <p class="p10">Nhân sư không lông</p>
+                    <p class="p20">8,929,000 <u>đ</u></p>
                 </div>
                 <div class="container4a">
                     <div class="img1">
                         <img src="/anh/meo8.png" alt=""height="280" width="280">
                     </div>
                     <p>MÈO CẢNH</p>
-                    <h1>Thổ Nhĩ Kỳ</h1>
-                    <h2>6,582,000 <u>đ</u></h2>
+                    <p class="p10">Thổ Nhĩ Kỳ</p>
+                    <p class="p20">6,582,000 <u>đ</u></p>
                 </div>
             </div>
             <div class="container5">
@@ -245,32 +245,32 @@
                         <img src="/anh/DoAn1.png" alt=""height="280" width="280">
                     </div>
                     <p>ĐỒ Ăn CHO MÈO</p>
-                    <h1>Xương gặm</h1>
-                    <h2>60,000 <u>đ</u></h2>
+                    <p class="p10">Xương gặm</p>
+                    <p class="p20">60,000 <u>đ</u></p>
                 </div>
                 <div class="container3a">
                     <div class="img1">
                         <img src="/anh/DoAn2.png" alt=""height="280" width="280">
                     </div>
                     <p>ĐỒ ĂN CHO CHÓ</p>
-                    <h1>Iskhan</h1>
-                    <h2>480,000 <u>đ</u></h2>
+                    <p class="p10">Iskhan</p>
+                    <p class="p20">480,000 <u>đ</u></p>
                 </div>
                 <div class="container3a">
                     <div class="img1">
                         <img src="/anh/DoAn3.png" alt=""height="280" width="280">
                     </div>
                     <p>ĐỒ ĂN CHO CHÓ</p>
-                    <h1>Whiskas cá biển</h1>
-                    <h2>35,000 <u>đ</u></h2>
+                    <p class="p10">Whiskas cá biển</p>
+                    <p class="p20">35,000 <u>đ</u></p>
                 </div>
                 <div class="container3a">
                     <div class="img1">
                         <img src="/anh/DoAn4.png" alt=""height="280" width="280">
                     </div>
                     <p>ĐỒ ĂN CHO MÈO</p>
-                    <h1>Me - O</h1>
-                    <h2>120,000 <u>đ</u></h2>
+                    <p class="p10">Me - O</p>
+                    <p class="p20">120,000 <u>đ</u></p>
                 </div>
             </div>
             <div class="container4">
@@ -279,32 +279,32 @@
                         <img src="/anh/DoAn5.png" alt=""height="280" width="280">
                     </div>
                     <p>ĐỒ ĂN CHO CHÓ</p>
-                    <h1>Steamed bread</h1>
-                    <h2>55,000 <u>đ</u></h2>
+                    <p class="p10">Steamed bread</p>
+                    <p class="p20">55,000 <u>đ</u></p>
                 </div>
                 <div class="container4a">
                     <div class="img1">
                         <img src="/anh/DoAn6.png" alt=""height="280" width="280">
                     </div>
                     <p>ĐỒ ĂN CHO MÈO</p>
-                    <h1>Royal Canin</h1>
-                    <h2>690,000 <u>đ</u></h2>
+                    <p class="p10">Royal Canin</p>
+                    <p class="p20">690,000 <u>đ</u></p>
                 </div>
                 <div class="container4a">
                     <div class="img1">
                         <img src="/anh/DoAn7.png" alt=""height="280" width="280">
                     </div>
                     <p>ĐỒ ĂN CHO CHÓ</p>
-                    <h1>Snack sleeky</h1>
-                    <h2>35,000 <u>đ</u></h2>
+                    <p class="p10">Snack sleeky</p>
+                    <p class="p20">35,000 <u>đ</u></p>
                 </div>
                 <div class="container4a">
                     <div class="img1">
                         <img src="/anh/DoAn8.png" alt=""height="280" width="280">
                     </div>
                     <p>ĐỒ ĂN CHO CHÓ</p>
-                    <h1>Pate smartheart</h1>
-                    <h2>35,000 <u>đ</u></h2>
+                    <p class="p10">Pate smartheart</p>
+                    <p class="p20">35,000 <u>đ</u></p>
                 </div>
             </div>
             <div class="container5">
